Avoid line wraps on title text

--- a/src/stylesheets/partials/_header.scss
+++ b/src/stylesheets/partials/_header.scss
@@ -20,6 +20,10 @@ $header-link-color: #ffffff;
     .usgs-logo {
       display: inline-block;
 
+      .usa-logo-text {
+        width: 100%;
+      }
+
       img {
         vertical-align: bottom;
         height: 2.75em;
